version/0.9/_sources/examples/gallery_examples/01-project-configuration/add_harmonic_profile.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\01-project-configuration\add_harmonic_profile.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01-project-configuration_add_harmonic_profile.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-project-configuration_add_harmonic_profile.py:


.. _ref_add_harmonic_vibe_profiles:

===============================
Add Harmonic Vibration Profiles
===============================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
create a lifecycle phase, add a harmonic event to the phase, and add harmonic
vibration profiles.

Description
-----------
Sherlock's gRPC API allows users to automate workflows such as adding harmonic vibration profiles
to lifecycle phases.
This script demonstrates how to:
- Connect to the Sherlock service.
- Import a project.
- Create a lifecycle phase.
- Add a harmonic event to the lifecycle phase.
- Add vibration profiles to the harmonic event.

The harmonic vibration profiles simulate the effects of vibration conditions on the board.

.. GENERATED FROM PYTHON SOURCE LINES 44-53

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import SherlockImportProjectZipArchiveError


.. GENERATED FROM PYTHON SOURCE LINES 55-58

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 58-61

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)


.. GENERATED FROM PYTHON SOURCE LINES 62-65

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 65-72

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 73-76

Import Tutorial Project
=======================
Import the tutorial project zip archive from the Sherlock tutorial directory.

.. GENERATED FROM PYTHON SOURCE LINES 76-87

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Auto Relay Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project zip archive: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 88-91

Create Lifecycle Phase and Add Harmonic Event
=============================================
Create a new lifecycle phase and add a harmonic event to it.

.. GENERATED FROM PYTHON SOURCE LINES 91-136

.. code-block:: Python


    try:
        phase_name = "Life Phase Example"
        event_name = "Example Harmonic Event"

        # Create lifecycle phase
        sherlock.lifecycle.create_life_phase(
            project="Test",
            phase_name=phase_name,
            duration=1.5,
            duration_units="sec",
            num_of_cycles=4.0,
            cycle_type="COUNT",
            description="Example lifecycle phase.",
        )
        print(f"Lifecycle phase '{phase_name}' created successfully.")

        # Add harmonic event to lifecycle phase
        sherlock.lifecycle.add_harmonic_event(
            project="Test",
            phase_name=phase_name,
            event_name=event_name,
            duration=1.5,
            duration_units="sec",
            num_of_cycles=4.0,
            cycle_type="PER MIN",
            sweep_rate=5,
            orientation="45,45",
            profile_type="Triaxial",
            load_direction="2,4,5",
            description="Example harmonic event.",
        )
        print(f"Harmonic event '{event_name}' added successfully.")

        # Add harmonic vibration profiles to the lifecycle phase.
        sherlock.lifecycle.add_harmonic_vibe_profiles(
            project="Test",
            harmonic_vibe_profiles=[
                (phase_name, event_name, "Profile z axis", "HZ", "G", [(10, 1), (1000, 1)], "z")
            ],
        )
        print("Harmonic vibration profile added successfully.")

    except Exception as e:
        print(f"Error creating life phase, harmonic event, or harmonic vibe profiles. {e}")


.. _sphx_glr_download_examples_gallery_examples_01-project-configuration_add_harmonic_profile.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_harmonic_profile.ipynb <add_harmonic_profile.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_harmonic_profile.py <add_harmonic_profile.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_harmonic_profile.zip <add_harmonic_profile.zip>`
